modified test suites and unit tested

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "pokedexapp",
   "private": true,
+  "scripts": {
+    "test": "karma start karma.conf.js"
+  },
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
     "grunt": "^0.4.5",
